--- a/.sops.yaml
+++ b/.sops.yaml
@@ -5,14 +5,5 @@ creation_rules:
   # Default rule for all files in the secrets directory
   - path_regex: secrets/.*
     # List of GPG keys that can encrypt/decrypt secrets
-    # Replace the fingerprint with your actual GPG key fingerprint
     pgp: >-
-      # Get your key fingerprint with: gpg --list-secret-keys --keyid-format=long
-      # It should look like: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-      REPLACE_WITH_YOUR_GPG_KEY_FINGERPRINT
-      
-    # You can add multiple keys by adding more fingerprints
-    # This allows multiple users/systems to decrypt the secrets
-    # pgp: >-
-    #   FINGERPRINT1
-    #   FINGERPRINT2
+      1C9145DA3075392EBA7E271469B16C8E0113CBA2 # ex1tium@outlook.com
